GNOME Bugzilla – Bug 785404
Commit 3b298f60 makes nautilus try to thumbnail folders
Last modified: 2017-09-04 12:31:26 UTC
nautilus crashes while generating thumbnails on gnome-desktop from git. Reverting gnome-desktop to 3.25.4 fixes it. Thread 4 "pool" received signal SIGSEGV, Segmentation fault. [Switching to Thread 0x7fffe6802700 (LWP 4966)] 0x00007ffff52d5260 in gnome_desktop_thumbnail_script_exec () from /usr/lib/libgnome-desktop-3.so.12 (gdb) thread apply all bt full
+ Trace 237695
Thread 8 (Thread 0x7fffceffd700 (LWP 5107))
Thread 7 (Thread 0x7fffcf7fe700 (LWP 5106))
Thread 6 (Thread 0x7fffcffff700 (LWP 5101))
Thread 4 (Thread 0x7fffe6802700 (LWP 4966))
Can’t reproduce it on my machine fwiw.
Ok, it stopped crashing but it now shows blank (missing) icons for folders (no folder thumbnailer installed) and /tmp/ quickly fills up with 3GB of gnome* files.
Unless I did something wrong in my git bisect, the thumbnailing breakage started with https://git.gnome.org/browse/gnome-desktop/commit/?id=3b298f60
Reverting that checkin makes thumbnailing work again so I can confirm it was the cause.
Looks like a thumbnailer crashing. You'll need to figure out which one that is, and report bugs against it.
(In reply to Bastien Nocera from comment #5) > Looks like a thumbnailer crashing. You'll need to figure out which one that > is, and report bugs against it. Ok, thank you very much for the directions. I will do so. it is likely either gsf-office.thumbnailer or totem.thumbnailer because I have hundreds of spreadsheets and text documents and over 180GB of videos.
I can confirm it works If I revert 3b298f60. On 32 bit even if bubblewrap is disabled (which ubuntu) did nautilus now takes lot longer to create folder thumbnail.
(In reply to Khurshid Alam from comment #7) > I can confirm it works If I revert 3b298f60. On 32 bit even if bubblewrap is > disabled (which ubuntu) did nautilus now takes lot longer to create folder > thumbnail. This is a separate bug, as folders really shouldn't go through the thumbnailer hot-path (setting up and launching something in bwrap) if there's no handler for the mime-type. I'm still waiting on Hussam's report as to which thumbnailer is crashing.
Nothing is crashing according to coredumpctl.
Hussam, do you have any thumbnailers in /usr/share/thumbnailers for which the binary mentioned in TryExec isn't installed?
They all have TryExec lines and the binaries mentioned are installed in the correct path. Also each thumbnailer contains the full path. For example, TryExec=/usr/bin/totem-video-thumbnailer Exec=/usr/bin/totem-video-thumbnailer -s %s %u %o
So now it's only the speed problem? This bug has transformed from crashes in libgnome-desktop to /tmp filling up. Is it about the speed now?
Created attachment 359070 [details] [review] thumbnail: Fix nautilus trying to thumbnail folders And loads of other non-thumbnailable files in a regression introduced in 3b298f60. To answer _can_thumbnail() correctly, we need to check whether a thumbnailer exists for the mime-type in question, not simply assume it to be available.
(In reply to Bastien Nocera from comment #12) > So now it's only the speed problem? This bug has transformed from crashes in > libgnome-desktop to /tmp filling up. Is it about the speed now? Both speed and /tmp filling up. With latest revision, I am seeing the following. without reverting 3b298f60: - entries in /tmp keep appearing and disappearing very quickly. - no crashes. - Thumbnails don't ever appear or get cached. - folder icons are blank. with reverting 3b298f60: - Entries in /tmp show up slowly and don't get cleaned up. - no crashes happen. - The occasional thumbnail appears after a minute. - folder icons show. I'm sorry this is taking much of your time. I'm not using bubblewrap nor flatpak.
I found the problem described in comment 7. Hussam, please try to keep the bugs to one issue in the future, even if the problems pile up. It's hard enough trying to track bugs in new code without having to guess how the problems show up :/ (In reply to Hussam Al-Tayeb from comment #14) > (In reply to Bastien Nocera from comment #12) > > So now it's only the speed problem? This bug has transformed from crashes in > > libgnome-desktop to /tmp filling up. Is it about the speed now? > > Both speed and /tmp filling up. > With latest revision, I am seeing the following. > > without reverting 3b298f60: > - entries in /tmp keep appearing and disappearing very quickly. > - no crashes. > - Thumbnails don't ever appear or get cached. > - folder icons are blank. > > with reverting 3b298f60: > - Entries in /tmp show up slowly and don't get cleaned up. > - no crashes happen. > - The occasional thumbnail appears after a minute. > - folder icons show. If this still happens on master with the patch attached to this bug, please file a new bug. Most of those were already fixed in other bugs that ended up in 3.25.91. > I'm not using bubblewrap nor flatpak. bubblewrap is a hard-requirement on Linux, you cannot *not* have it installed and expect things to work.
Ok, I will install it and rebuild gnome-desktop.
Attachment 359070 [details] pushed as 2d6ce46 - thumbnail: Fix nautilus trying to thumbnail folders
Ok, I've filed bug 787249 regarding the remaining thumbnailing issues. Thank you very much.