thumbnail: Fix nautilus trying to thumbnail folders

And loads of other non-thumbnailable files in a regression introduced in
3b298f60. To answer _can_thumbnail() correctly, we need to check whether
a thumbnailer exists for the mime-type in question, not simply assume it
to be available.

https://bugzilla.gnome.org/show_bug.cgi?id=785404